--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.12.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.2"
+    "mongoose": "^5.13.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
